[workspace]
members = [
    "epd-waveshare-async",
    "samples/*",
]
default-members = [
    "epd-waveshare-async",
]
resolver = "2"

[workspace.package]
authors = ["Morgan Roff"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MorganR/epd-waveshare-async"

[profile.release]
debug = 2
lto = true
opt-level = "z" 
# Note: could enable codegen-units=1 if we need to reduce the binary size even further

[profile.dev]
debug = 2
lto = false
opt-level = 0

[workspace.dependencies]
defmt = "1.0.1"
embedded-graphics = { version = "0.8.1" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
