[workspace]
members = [
    "epd-waveshare-async",
    "samples/*",
]
default-members = [
    "epd-waveshare-async",
]
resolver = "2"

[workspace.package]
authors = ["Morgan Roff"]
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MorganR/epd-waveshare-async"
readme = "README.md"

[profile.release]
debug = 2
lto = true
opt-level = "z" 
# Note: could enable codegen-units=1 if we need to reduce the binary size even further

[profile.dev]
debug = 2
lto = false
opt-level = 0

[workspace.dependencies]
defmt = "1.0"
embedded-graphics = { version = "0.8" }
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Dev dependencies
embassy-embedded-hal = { version = "0.5", features = ["defmt"] }
embassy-rp = { version = "0.8", features = ["chrono", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "boot2-w25q080", "rp2040", "rom-v2-intrinsics"] }
embassy-sync = "0.7"
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime-s"] }
thiserror = { version = "2.0", default-features = false }
