[package]
name = "epd-waveshare-async"
keywords = ["embedded", "async", "e-paper", "waveshare", "display"]
description = "Async drivers for Waveshare's e-paper displays."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
embedded-graphics.workspace = true
embedded-hal.workspace = true
embedded-hal-async.workspace = true
log = { version = "0.4.27", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
log = ["dep:log"]