[package]
name = "epd-waveshare-async"
keywords = ["embedded", "async", "e-paper", "waveshare", "display"]
description = "Async drivers for Waveshare's e-paper displays."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bitflags = { version = "2.9.2" }
defmt = { workspace = true, optional = true }
embedded-graphics.workspace = true
embedded-hal.workspace = true
embedded-hal-async.workspace = true
heapless = "0.8"
log = { version = "0.4", optional = true }

[dev-dependencies]
embassy-embedded-hal = { workspace = true, features = ["defmt"] }
embassy-rp = { workspace = true, features = ["chrono", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "boot2-w25q080", "rp2040", "rom-v2-intrinsics"] }
embassy-sync.workspace = true
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime-s"] }
thiserror = { workspace = true, default-features = false }

[features]
default = []
defmt = ["dep:defmt"]
log = ["dep:log"]
