[package]
name = "rp-pico-examples"
authors = ["Morgan Roff"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.4.0", features = ["chrono", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "boot2-w25q080", "rp2040", "rom-v2-intrinsics"] }

defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal-async.workspace = true
epd-waveshare-async = { path = "../../epd-waveshare-async" }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime-s"] }
defmt = "1.0.1"
thiserror = { version = "2.0.12", default-features = false }
assign-resources = "0.4.1"
