[package]
name = "rp-samples"
description = "Samples for the Raspberry Pi RP2040 using Waveshare e-paper displays."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
embassy-embedded-hal = { version = "0.4", features = ["defmt"] }
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { workspace = true, features = ["chrono", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "boot2-w25q080", "rp2040", "rom-v2-intrinsics"] }

defmt-rtt = "1.0"

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

defmt.workspace = true
embedded-graphics.workspace = true
embedded-hal-async.workspace = true
epd-waveshare-async = { path = "../../epd-waveshare-async", features = ["defmt"] }
embassy-time.workspace = true
thiserror = { workspace = true, default-features = false }
assign-resources = "0.5"
embassy-sync.workspace = true
